# Orchestry

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CUSTOM_RESEARCH_QUICKSTART.md  HOW_IT_WORKS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REORGANIZATION_SUMMARY.md  RESEARCH_LAB_GUIDE.md  REWARD_SYSTEMS.md  TODO.md  coverage.xml  main.py  pyproject.toml  requirements.txt  ruff.toml  setup.py  test_gemini_api.py  test_marl.py  verify_setup.py
analysis/: __init__.py  detect_schemes.py  plot_results.py
backend/: .env.example  README.md  requirements.txt  run.py  supabase_schema.sql
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py
backend/app/middleware/: auth.py
backend/app/models/: training.py
backend/app/routes/: health.py  training.py
backend/app/services/: training_service.py
configs/: legacy.yaml  magrpo_local.yaml  marl.yaml  research_lab.yaml
docs/: IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  QUICKSTART.md  README_legacy.md
examples/: research_questions_template.json  run_legacy.py  run_marl.py  run_research_lab.py  solve_custom_research.py  solve_research_with_llm_judge.py
orchestry/: __init__.py
orchestry/baselines/: __init__.py  discussion.py  fixed_model.py  naive_concat.py  sequential.py
orchestry/cli/: __init__.py  legacy.py  marl.py
orchestry/legacy/: __init__.py  agent.py  environment.py  rewards.py  trainer.py  utils.py
orchestry/marl/: __init__.py  api_grpo.py  api_grpo.py.backup  api_grpo.py.broken  behavior_library.py  local_inference.py  trainer.py  trajectory.py  value_estimator.py
orchestry/marl/algorithms/: __init__.py  magrpo.py
orchestry/marl/rewards/: __init__.py  budget_tracker.py  code_reward.py  research_reward.py
orchestry/marl/training/: __init__.py  magrpo_trainer.py
orchestry/tasks/: __init__.py  base.py  code_collaboration.py  code_review.py  research_lab.py
orchestry/utils/: __init__.py  rate_limiter.py
src/: __init__.py  agent.py  environment.py  rewards.py  trainer.py  utils.py
tests/: __init__.py  test_basic.py
tests/legacy/: test_legacy_basic.py
tests/marl/: test_trajectory.py
